# emojicode

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .travis.yml  0.6.md  Android.mk  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  DockerfileClang  DockerfileGCC  EmojicodeAPI.h  EmojicodeDictionary.h  EmojicodeInstructions.h  EmojicodeList.h  EmojicodeShared.h  EmojicodeString.h  FAQs  LICENSE  MakeAndroid.sh  Makefile  README.md  Rakefile  codeship-services.yml  codeship-steps.yml  dist.py  hello.emojib  install.sh  tests.py  utf8.h
.travis/: install.sh
Compiler/: .clang-tidy  CMakeLists.txt  Compiler.cpp  Compiler.hpp  CompilerError.hpp  EmojicodeCompiler.hpp  Emojis.h
Compiler/AST/: ASTBinaryOperator.cpp  ASTBinaryOperator.hpp  ASTBinaryOperator_CG.cpp  ASTBoxing.hpp  ASTBoxing_CG.cpp  ASTCast.cpp  ASTCast.hpp  ASTCast_CG.cpp  ASTClosure.cpp  ASTClosure.hpp  ASTClosure_CG.cpp  ASTConditionalAssignment.cpp  ASTConditionalAssignment.hpp  ASTControlFlow.cpp  ASTControlFlow.hpp  ASTControlFlow_CG.cpp  ASTExpr.cpp  ASTExpr.hpp  ASTExpr_CG.cpp  ASTInitialization.cpp  ASTInitialization.hpp  ASTInitialization_CG.cpp  ASTLiterals.cpp  ASTLiterals.hpp  ASTLiterals_CG.cpp  ASTMemory.cpp  ASTMemory.hpp  ASTMethod.cpp  ASTMethod.hpp  ASTMethod_CG.cpp  ASTNode.cpp  ASTNode.hpp  ASTStatements.cpp  ASTStatements.hpp  ASTStatements_CG.cpp  ASTSuper.cpp  ASTSuper.hpp  ASTType.cpp  ASTType.hpp  ASTTypeAsValue.cpp  (+16 more)
Compiler/Analysis/: BoxingLayerBuilder.cpp  BoxingLayerBuilder.hpp  DeinitializerBuilder.cpp  DeinitializerBuilder.hpp  ExpressionAnalyser.cpp  ExpressionAnalyser.hpp  FunctionAnalyser.cpp  FunctionAnalyser.hpp  GenericInferer.hpp  PathAnalyser.cpp  PathAnalyser.hpp  SemanticAnalyser.cpp  SemanticAnalyser.hpp  ThunkBuilder.cpp  ThunkBuilder.hpp
Compiler/CLI/: HRFCompilerDelegate.cpp  HRFCompilerDelegate.hpp  JSONCompilerDelegate.cpp  JSONCompilerDelegate.hpp  JSONHelper.h  Options.cpp  Options.hpp  PackageReporter.cpp  PackageReporter.hpp  main.cpp
Compiler/Functions/: BoxingLayer.hpp  CallType.h  Function.cpp  Function.hpp  FunctionResolver.cpp  FunctionResolver.hpp  FunctionType.cpp  FunctionType.hpp  Initializer.hpp  Mood.hpp  ProtocolFunction.cpp  ProtocolFunction.hpp
Compiler/Generation/: BoxRetainReleaseBuilder.cpp  BoxRetainReleaseBuilder.hpp  CallCodeGenerator.cpp  CallCodeGenerator.hpp  ClosureCodeGenerator.cpp  ClosureCodeGenerator.hpp  CodeGenerator.cpp  CodeGenerator.hpp  Creator.cpp  Creator.hpp  Declarator.cpp  Declarator.hpp  FunctionCodeGenerator.cpp  FunctionCodeGenerator.hpp  LLVMTypeHelper.cpp  LLVMTypeHelper.hpp  Mangler.cpp  Mangler.hpp  OptimizationManager.cpp  OptimizationManager.hpp  ProtocolsTableGenerator.cpp  ProtocolsTableGenerator.hpp  ReferenceCountingPasses.cpp  ReferenceCountingPasses.hpp  ReificationContext.cpp  ReificationContext.hpp  RunTimeHelper.cpp  RunTimeHelper.hpp  RunTimeTypeInfoFlags.hpp  StringPool.cpp  StringPool.hpp  TypeDescriptionGenerator.cpp  TypeDescriptionGenerator.hpp  VTCreator.cpp  VTCreator.hpp
Compiler/Lex/: EmojiTokenization.cpp  EmojiTokenization.hpp  Lexer.cpp  Lexer.hpp  SourceManager.cpp  SourceManager.hpp  SourcePosition.cpp  SourcePosition.hpp  Token.cpp  Token.hpp  TokenStream.cpp  TokenStream.hpp
Compiler/MemoryFlowAnalysis/: MFAnalyser.cpp  MFAnalyser.hpp  MFFlowCategory.hpp  MFFunctionAnalyser.cpp  MFFunctionAnalyser.hpp  MFHeapAllocates.cpp  MFHeapAllocates.hpp  MFType.hpp
Compiler/Package/: Definition.hpp  Package.cpp  Package.hpp  RecordingPackage.cpp  RecordingPackage.hpp
Compiler/Parsing/: AbstractParser.cpp  AbstractParser.hpp  AttributesParser.hpp  CompatibilityInfoProvider.cpp  CompatibleFunctionParser.cpp  CompatibleFunctionParser.hpp  DocumentParser.cpp  DocumentParser.hpp  FunctionParser.cpp  FunctionParser.hpp  OperatorHelper.cpp  OperatorHelper.hpp  ProtocolTypeBodyParser.cpp  ProtocolTypeBodyParser.hpp  TypeBodyParser.cpp  TypeBodyParser.hpp
Compiler/Prettyprint/: ASTToCode.cpp  PrettyPrinter.cpp  PrettyPrinter.hpp  PrettyStream.cpp  PrettyStream.hpp  Prettyprinter.cpp  Prettyprinter.hpp
Compiler/Scoping/: CGScoper.cpp  CGScoper.hpp  CapturingSemanticScoper.cpp  CapturingSemanticScoper.hpp  IDScoper.hpp  Scope.cpp  Scope.hpp  SemanticScopeStats.hpp  SemanticScoper.cpp  SemanticScoper.hpp  Variable.cpp  Variable.hpp  VariableNotFoundError.hpp
Compiler/Types/: Class.cpp  Class.hpp  CommonTypeFinder.cpp  CommonTypeFinder.hpp  Enum.cpp  Enum.hpp  Extension.cpp  Extension.hpp  Generic.cpp  Generic.hpp  Protocol.cpp  Protocol.hpp  StorageType.cpp  StorageType.hpp  Type.cpp  Type.hpp  TypeAvailability.cpp  TypeAvailability.hpp  TypeContext.cpp  TypeContext.hpp  TypeDefinition.cpp  TypeDefinition.hpp  TypeExpectation.cpp  TypeExpectation.hpp  ValueType.cpp  ValueType.hpp
Compiler/Utils/: StringUtils.hpp  rang.hpp
DefaultPackages/: net.c
Emojicode/: Class.c  Emojicode.c  Emojicode.h  EmojicodeDictionary.c  EmojicodeList.c  EmojicodeString.c  JSON.c  Object.c  Reader.c  Stack.c  standard.c  utf8.c  utf8.h
Emojicode.xcodeproj/: project.pbxproj
EmojicodeCompiler/: .clang-tidy  AbstractParser.cpp  AbstractParser.hpp  Application.cpp  Application.hpp  BoxIDProvider.cpp  BoxIDProvider.hpp  BoxingLayer.hpp  Callable.cpp  Callable.hpp  CallableParserAndGenerator.cpp  CallableParserAndGenerator.hpp  CallableParserAndGeneratorMode.hpp  CallableScoper.cpp  (+128 more)
files/: CMakeLists.txt  File.cpp  files.emojic  files.🍇  filesystem.cpp
json/: CMakeLists.txt  json.emojic  json.🍇
s/: Byte.cpp  CMakeLists.txt  Data.cpp  Data.h  Data.hpp  Error.cpp  Error.h  Integer.cpp  Prng.cpp  Real.cpp  String.cpp  String.h  String.hpp  Symbol.cpp  System.cpp  Thread.cpp  boolean.emojic  boolean.🍇  byte.emojic  byte.🍇  comparable.🍇  data.emojic  data.🍇  dictionary.emojic  dictionary.🍇  double.emojic  error.emojic  error.🍇  integer.emojic  integer.🍇  interface.emojii  iterator.🍇  list.emojic  list.🍇  list_iterator.emojic  list_iterator.🍇  memory.emojic  memory.🍇  prng.emojic  prng.🍇  (+30 more)
sockets/: CMakeLists.txt  Socket.cpp  sockets.emojic  sockets.🍇
testtube/: CMakeLists.txt  testtube.emojic  testtube.🍇
(+3069 files in other folders)
